feat: add footer

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<mat-toolbar color='primary'>
+
+    <mat-list>
+        <mat-list-item *ngFor='let user of info; let i= index'>
+
+            <a matLine [href]='user.linkGit' target='_blank'>
+                <img matListAvatar
+                     [src]='user.avatar'
+                     alt='User avatar'>
+                {{ user.name }}
+            </a>
+
+        </mat-list-item>
+    </mat-list>
+
+    <span>(C) 2022</span>
+</mat-toolbar>
