--- a/src/app/core/auth-layout/auth-layout.component.html
+++ b/src/app/core/auth-layout/auth-layout.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-<p>Тут нужно встати встатить сыслки на переходы, я сделаю который будет отправлять на разные страницы </p>
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
