feat: add components, service, pages, routing

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -23,7 +23,7 @@
             logout
 
         </button>
-        <button mat-list-item>
+        <button mat-list-item (click)="goSignInPage()">
 
             <mat-icon>person_outline</mat-icon>
             login
