--- a/src/app/auth/components/sign-in/sign-in.component.html
+++ b/src/app/auth/components/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<form class='container' [formGroup]='loginForm' (submit)='submit()'>
+<form class='container' [formGroup]='loginForm' (submit)='login()'>
     <h2>Login</h2>
 
     <mat-error *ngIf="loginForm.hasError('loginErr')">
