--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,10 +1,10 @@
-
 mat-toolbar {
     position: absolute;
     bottom: 0;
     display: flex;
     flex-direction: column;
     height: max-content;
+    background-color: #81b29a !important;
 
 
     mat-list {
