--- a/src/app/modules/mail-list/components/table-list/table-list.component.html
+++ b/src/app/modules/mail-list/components/table-list/table-list.component.html
@@ -2,6 +2,12 @@
 <mat-nav-list class='board-list'>
     <mat-list-item *ngFor='let board of boards'>
         <a matLine [routerLink]="['../','board']" [queryParams]='{id: board.id}'>{{ board.title }}</a>
+
+
+        <button mat-icon-button (click)='onDeleteBoard(board)'>
+            <mat-icon>delete_outline</mat-icon>
+        </button>
+
         <button mat-icon-button (click)='showInfo(board.id)'>
             <mat-icon>info</mat-icon>
         </button>
