--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,9 +1,9 @@
 mat-toolbar {
-    position: absolute;
+    height: 12%;
+    position: relative;
     bottom: 0;
     display: flex;
     flex-direction: column;
-    height: max-content;
     background-color: #81b29a !important;
 
 
