--- a/src/app/modules/board/components/column/column.component.scss
+++ b/src/app/modules/board/components/column/column.component.scss
@@ -1,3 +1,11 @@
+.title-column {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
 .column {
     border: solid 1px rgba(192, 192, 192, 0.27);
     border-radius: 6px !important;
