--- a/src/app/modules/mail-list/container/lists-shell/lists-shell.component.html
+++ b/src/app/modules/mail-list/container/lists-shell/lists-shell.component.html
@@ -1,10 +1,12 @@
-<ng-container *ngIf='boards; else empty'>
-    <app-table-list [boards]='boards'></app-table-list>
+<ng-container *ngIf='boards$ | async; else empty'>
+    <app-table-list [boards]='boards$ | async '
+                    (deleteBoard)='onDeleteBoard($event)'>
+    </app-table-list>
 </ng-container>
 
-<mat-spinner *ngIf='isLoading'></mat-spinner>
+<mat-spinner *ngIf='(boards$ | async)?.length < 1'></mat-spinner>
 
 <ng-template #empty>
-    <p *ngIf='!isLoading'>File not found</p>
+    <p *ngIf='(boards$| async)?.length < 1'>File not found</p>
 </ng-template>
 
