feat: Add or delete task

--- a/src/app/modules/board/containers/board-shell/board-shell.component.html
+++ b/src/app/modules/board/containers/board-shell/board-shell.component.html
@@ -16,6 +16,8 @@
                             [column]='column'
                             [index]='i'
                             (deleteColumn)='onDeleteColumn($event)'
+                            (addTask)='onAddTask($event)'
+                            (deleteTask)='onDeleteTask($event)'
                 >
                 </app-column>
             </div>
