--- a/src/app/modules/board/containers/board-shell/board-shell.component.scss
+++ b/src/app/modules/board/containers/board-shell/board-shell.component.scss
@@ -4,6 +4,7 @@
     justify-content: flex-start;
     padding: 50px 50px 20px;
     height: 69%;
+    overflow: scroll;
 
     .back-btn {
         transform: scale(1.6);
