--- a/src/app/modules/board/components/column/column.component.html
+++ b/src/app/modules/board/components/column/column.component.html
@@ -1,4 +1,3 @@
-
 <div class='title-column'>
     <h4 [style.color]='"#14213d"'>Title: {{column.title}}</h4>
 
@@ -8,7 +7,17 @@
 </div>
 
 <div class='column'>
+    <button mat-mini-fab (click)='onAddTask(column)'>
+        <mat-icon>add</mat-icon>
+    </button>
+
     <div class='tasks'>
-        <p *ngIf='!column.tasks.length'>Task list is empty</p>
+        <p *ngIf='!column.tasks.length; else tasks'>Task list is empty</p>
     </div>
+
+    <ng-template #tasks>
+        <app-task *ngFor='let task of column.tasks'
+                  [task]='task'
+                  (deleteTask)='deleteTask.emit({task, columnId:column.id})'></app-task>
+    </ng-template>
 </div>
