--- a/src/app/modules/board/components/column/column.component.scss
+++ b/src/app/modules/board/components/column/column.component.scss
@@ -14,7 +14,13 @@
     max-width: 355px;
     background-color: #f2cc8f;
     margin-right: 16px;
-    height: 100%;
-    //height: 0;
-    overflow-x: visible !important;
+    min-height: 350px;
+    max-height: 350px;
+    overflow: scroll;
+
+    button {
+        margin-bottom: 10px;
+    }
+
 }
+
