feat: implement opening a modal window in a separate route

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -14,7 +14,7 @@
     </mat-nav-list>
 
     <mat-action-list aria-label>
-         <button mat-list-item (click)="openDialog()">
+         <button mat-list-item routerLink='create-new-board'>
             <mat-icon>add_box</mat-icon>
             Create new board
         </button>
