--- a/src/app/core/components/edit-profile/edit-profile.component.html
+++ b/src/app/core/components/edit-profile/edit-profile.component.html
@@ -1,9 +1,15 @@
-<form class="edit-profile-form" [formGroup]="editProfileForm" *ngIf="editProfileForm" name="edit-profile-form" (ngSubmit)="onSubmit()">
+<form
+    class="edit-profile-form"
+    [formGroup]="editProfileForm"
+    *ngIf="editProfileForm"
+    name="edit-profile-form"
+    (ngSubmit)="onEditUser($event)"
+>
     <h2>Edit profile</h2>
     <mat-form-field class="edit-profile-form-field" appearance="fill">
       <mat-label>Name</mat-label>
       <input formControlName="name" type="text" name="name" autocomplete="off" matInput/>
-      <mat-error class="input-error" *ngIf="editProfileForm.controls['name'].invalid && editProfileForm.controls.touched">
+      <mat-error class="input-error" *ngIf="editProfileForm.controls['name'].invalid" >
         <span *ngIf="editProfileForm.controls['name'].errors?.['required']">Please enter your name</span>
         <span *ngIf="editProfileForm.controls['name'].errors?.['minlength']"> The name is too short</span>
         <span *ngIf="editProfileForm.controls['name'].errors?.['maxlength']"> The name is too long</span>
@@ -12,14 +18,14 @@
     <mat-form-field class="edit-profile-form-field" appearance="fill">
       <mat-label>Login</mat-label>
       <input formControlName="login" type="text" name="login" autocomplete="off" matInput/>
-      <mat-error class="input-error" *ngIf="editProfileForm.controls['login'].invalid && editProfileForm.controls['login'].touched">
+      <mat-error class="input-error" *ngIf="editProfileForm.controls['login'].invalid">
         <span *ngIf="editProfileForm.controls['login'].errors?.['maxlength']"> The login is too long</span>
       </mat-error>
     </mat-form-field>
     <mat-form-field class="edit-profile-form-field" appearance="fill">
       <mat-label>Password</mat-label>
       <input formControlName="password" matInput name="password" [type]="hide ? 'password' : 'text'" autocomplete="off" name="password" />
-      <mat-error class="input-error" *ngIf="editProfileForm.controls['password'].invalid && editProfileForm.controls['password'].touched">
+      <mat-error class="input-error" *ngIf="editProfileForm.controls['password'].invalid">
         <span *ngIf="editProfileForm.controls['password'].errors?.['required']"> Please enter a password</span>
         <span *ngIf="editProfileForm.controls['password'].errors?.['minlength']">Your password is too short</span>
       </mat-error>
@@ -34,10 +40,10 @@
     </button>
     </mat-form-field>
     <div class="form-controls">
-        <button class="btn-form-profile" type="submit" color='warn' [disabled]="editProfileForm.invalid" mat-raised-button>
+        <button class="btn-form-profile" type="submit" color='warn' mat-raised-button>
             Edit
         </button>
-        <button class="btn-form-profile" color='warn' mat-raised-button> Delete </button>
+        <button class="btn-form-profile" color='warn' mat-raised-button (click)='onDeleteUser($event)'> Delete </button>
         <button class="btn-form-profile" color='warn' (click)="goBack()" mat-raised-button> Back </button>
     </div>
 </form>
