--- a/src/app/core/components/edit-profile/edit-profile.component.scss
+++ b/src/app/core/components/edit-profile/edit-profile.component.scss
@@ -1,5 +1,4 @@
 :host {
-    padding-top: 100px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -8,7 +7,8 @@
 
 .edit-profile-form {
     display: flex;
-    width: 350px;
+    max-width: 400px;
+    width: 100%;
     height: 400px;
     padding-left: 45px;
     flex-direction: column;
@@ -18,7 +18,12 @@
 .edit-profile-form-field {
     padding-bottom: 20px;
     text-align: left;
-    width: 300px;
+}
+
+.form-controls,
+.edit-profile-form-field {
+    max-width: 350px;
+    width: 100%;
 }
 
 .edit-profile-form-field:first-child {
@@ -27,7 +32,6 @@
 
 .form-controls {
     display: flex;
-    width: 300px;
     justify-content: space-between;
     align-items: center;
 }
