--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,15 +1,10 @@
-<mat-toolbar color='primary'>
-
+<mat-toolbar color="primary">
     <mat-list>
-        <mat-list-item *ngFor='let user of info; let i= index'>
-
-            <a matLine [href]='user.linkGit' target='_blank'>
-                <img matListAvatar
-                     [src]='user.avatar'
-                     alt='User avatar'>
+        <mat-list-item *ngFor="let user of info; let i = index">
+            <a matLine [href]="user.linkGit" target="_blank">
+                <img matListAvatar [src]="user.avatar" alt="User avatar" />
                 {{ user.name }}
             </a>
-
         </mat-list-item>
     </mat-list>
 
