--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,29 +1,26 @@
-<mat-toolbar color='primary'>
-
-    <mat-nav-list class='nav-list'>
+<mat-toolbar color="primary">
+    <mat-nav-list class="nav-list">
         <a
-            [routerLink]='link.route'
-            routerLinkActive='selected'
+            [routerLink]="link.route"
+            routerLinkActive="selected"
             mat-list-item
-            *ngFor='let link of links'
+            *ngFor="let link of links"
         >
-            <mat-icon>{{link.icon}}</mat-icon>
+            <mat-icon>{{ link.icon }}</mat-icon>
             <span>{{ link.name }}</span>
         </a>
-
     </mat-nav-list>
 
     <mat-action-list aria-label>
-        <button mat-list-item>
-            <mat-icon>translate</mat-icon>
-            RU/EN
-        </button>
+        <mat-icon>translate</mat-icon>
+        <div class="locales-wrap">
+            <a matLine href="/en/" [class.active]="isEnActive" (click)="toggleClass()"> EN </a>
+            <a matLine href="/ru/" [class.active]="isRuActive" (click)="toggleClass()"> RU </a>
+        </div>
 
-        <button mat-list-item (click)='logOut()'>
+        <button mat-list-item (click)="logOut()" i18n="argument@@logMsg">
             <mat-icon>power_settings_new</mat-icon>
             logout
         </button>
-
     </mat-action-list>
-
 </mat-toolbar>
