--- a/src/app/modules/mail-list/components/table-list/table-list.component.html
+++ b/src/app/modules/mail-list/components/table-list/table-list.component.html
@@ -1,48 +1,78 @@
-<table fxLayoutAlign='space-between center'
-       mat-table
-       matSort
-       [dataSource]='dataSource'
-       class='mat-elevation-z8'>
-
+<table
+    fxLayoutAlign="space-between center"
+    mat-table
+    matSort
+    [dataSource]="dataSource"
+    class="mat-elevation-z8"
+>
     <!-- Position Column -->
-    <ng-container matColumnDef='position'>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription='Sort by position'>
+    <ng-container matColumnDef="position">
+        <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            sortActionDescription="Sort by position"
+        >
             No.
         </th>
-        <td mat-cell *matCellDef='let element'> {{element.position}} </td>
+        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef='title'>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription='Sort by title'>
+    <ng-container matColumnDef="title">
+        <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            sortActionDescription="Sort by title"
+            i18n="Simple message@@mainTitleMsg"
+        >
             Title
         </th>
-        <td mat-cell *matCellDef='let element'> {{element.title}} </td>
+        <td mat-cell *matCellDef="let element">{{ element.title }}</td>
     </ng-container>
 
     <!-- Weight Column -->
-    <ng-container matColumnDef='description'>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription='Sort by description'>
+    <ng-container matColumnDef="description">
+        <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            sortActionDescription="Sort by description"
+            i18n="Simple message@@mainDescrMsg"
+        >
             Description
         </th>
-        <td mat-cell *matCellDef='let element'> {{element.description}} </td>
+        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef='author'>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription='Sort by author'>
+    <ng-container matColumnDef="author">
+        <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            sortActionDescription="Sort by author"
+            i18n="Simple message@@mainAutorMsg"
+        >
             Author
         </th>
-        <td mat-cell *matCellDef='let element'> {{element.author}} </td>
+        <td mat-cell *matCellDef="let element">{{ element.author }}</td>
     </ng-container>
 
-    <ng-container matColumnDef='date'>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription='Sort by date'>
+    <ng-container matColumnDef="date">
+        <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            sortActionDescription="Sort by date"
+            i18n="Simple message@@mainDateMsg"
+        >
             Date
         </th>
-        <td mat-cell *matCellDef='let element'> {{element.date | date :'dd MMM yy'}} </td>
+        <td mat-cell *matCellDef="let element">{{ element.date | date: 'dd MMM yy' }}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-    <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
