--- a/src/app/modules/mail-list/container/lists-shell/lists-shell.component.html
+++ b/src/app/modules/mail-list/container/lists-shell/lists-shell.component.html
@@ -1,10 +1,9 @@
-<div *ngIf='data; else empty'>
-    <app-table-list [list]='data'></app-table-list>
+<div *ngIf="data; else empty">
+    <app-table-list [list]="data"></app-table-list>
 </div>
 
-<mat-spinner *ngIf='isLoading'></mat-spinner>
+<mat-spinner *ngIf="isLoading"></mat-spinner>
 
 <ng-template #empty>
-    <p *ngIf='!isLoading'>File not found</p>
+    <p *ngIf="!isLoading" i18n="Simple message@@fileNotFoundMsg">File not found</p>
 </ng-template>
-
