--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -51,9 +51,11 @@ mat-toolbar {
             }
         }
 
-        .locale-wrap {
+        .locales-wrap {
             height: 100%;
             margin-left: 15px;
+            margin-right: 15px;
+            cursor: pointer;
         }
     }
 }
