--- a/src/app/modules/board/components/task/task.component.scss
+++ b/src/app/modules/board/components/task/task.component.scss
@@ -5,23 +5,34 @@
     align-items: center;
     margin-bottom: 10px;
 }
-.task-item {
+
+mat-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
     cursor: pointer;
     border-radius: 10px;
     padding: 5px 10px;
-    background-color: #81b29a;
-    width: 100%;
     overflow: hidden;
 
-    p{
-        margin: 0;
-        text-overflow: ellipsis;
+    mat-card-header {
+        max-width: 90%;
         overflow: hidden;
-        white-space: nowrap;
+        text-overflow: ellipsis;
+
+        mat-card-title {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            margin: 0 0 10px;
+
+        }
     }
+
 }
 
 button {
     margin-left: 10px;
-    background-color: inherit!important;
+    background-color: inherit !important;
 }
