--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,6 +1,6 @@
 mat-toolbar {
-    height: 9%;
-    position: fixed;
+    //height: 100%;
+    //position: relative;
     bottom: 0;
     display: flex;
     flex-direction: column;
@@ -36,7 +36,7 @@ mat-toolbar {
     span {
         font-size: 14px;
         margin: 0;
-
+        height: 10px;
     }
 
 }
