--- a/src/app/modules/mail-list/components/table-list/table-list.component.scss
+++ b/src/app/modules/mail-list/components/table-list/table-list.component.scss
@@ -1,5 +1,6 @@
 :host{
     margin: 0 auto;
+    width: 400px;
 }
 .board-list, h3{
     max-width: 400px;
@@ -8,7 +9,7 @@
 
 .board-list {
     min-height: 62%;
-    padding-bottom: 180px;
+    padding-bottom: 50px;
 }
 
 button {
