--- a/src/app/modules/mail-list/container/lists-shell/lists-shell.component.scss
+++ b/src/app/modules/mail-list/container/lists-shell/lists-shell.component.scss
@@ -1,9 +1,12 @@
 :host {
-    width: 100%;
-    height: 100%;
+    //width: 100%;
+    //height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 
-    mat-spinner {
+    mat-spinner, .empty {
         margin: 100px auto 0;
     }
 }
