feat: add drop down

--- a/src/app/modules/board/components/column/column.component.html
+++ b/src/app/modules/board/components/column/column.component.html
@@ -16,8 +16,12 @@
     </div>
 
     <ng-template #tasks>
-        <app-task *ngFor='let task of column.tasks'
-                  [task]='task'
-                  (deleteTask)='deleteTask.emit({task, columnId:column.id})'></app-task>
+        <div cdkDropList class='example-list' [cdkDropListData]='column.tasks' (cdkDropListDropped)='drop($event)'>
+            <app-task *ngFor='let task of column.tasks'
+                      cdkDrag
+                      class='example-box'
+                      [task]='task'
+                      (deleteTask)='deleteTask.emit({task, columnId:column.id})'></app-task>
+        </div>
     </ng-template>
 </div>
