--- a/src/app/modules/mail-list/container/lists-shell/lists-shell.component.html
+++ b/src/app/modules/mail-list/container/lists-shell/lists-shell.component.html
@@ -1,11 +1,10 @@
-<ng-container *ngIf='boards$ | async; else empty'>
+<ng-container *ngIf='(boards$ | async)?.length; else empty'>
     <app-table-list [boards]='boards$ | async '
-                    (deleteBoard)='onDeleteBoard($event)'>
+                    (deleteBoard)='onDeleteBoard($event)'
+                    (showInfo)='onShowInfo($event)'>
     </app-table-list>
 </ng-container>
 
-<mat-spinner *ngIf='(boards$ | async)?.length < 1'></mat-spinner>
-
 <ng-template #empty>
-    <p class='empty' *ngIf='(boards$| async)?.length < 1' i18n="Simple message@@fileNotFoundMsg">File not found</p>
+    <p class='empty' i18n='Simple message@@fileNotFoundMsg'>File not found</p>
 </ng-template>
