feat: implement edit column title

--- a/src/app/modules/board/components/column/column.component.scss
+++ b/src/app/modules/board/components/column/column.component.scss
@@ -24,3 +24,16 @@
 
 }
 
+.btn-form-column {
+    text-transform: capitalize;
+    padding: 0;
+    border-radius: 4px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+.column-form-field {
+
+}
+
