--- a/src/app/modules/board/containers/board-shell/board-shell.component.html
+++ b/src/app/modules/board/containers/board-shell/board-shell.component.html
@@ -16,6 +16,7 @@
                             [column]='column'
                             [index]='i'
                             (deleteColumn)='onDeleteColumn($event)'
+                            (editColumn)='onEditColumn($event)'
                             (addTask)='onAddTask($event)'
                             (deleteTask)='onDeleteTask($event)'
                 >
