--- a/src/app/modules/board/components/column/column.component.scss
+++ b/src/app/modules/board/components/column/column.component.scss
@@ -3,7 +3,11 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 10px 20px;
+
+    h4 {
+        margin: 0;
+    }
 }
 
 .column {
@@ -21,7 +25,6 @@
     button {
         margin-bottom: 10px;
     }
-
 }
 
 .btn-form-column {
@@ -33,7 +36,9 @@
     font-size: 12px;
 }
 
-.column-form-field {
-
+.column-form-input {
+    display: block;
+    width: 100%;
+    height: 24px;
+    background-color: #efefef;
 }
-
