--- a/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
+++ b/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
@@ -25,7 +25,7 @@
 </div>
 
 <mat-dialog-actions class='create-board-controls'>
-    <button mat-button [mat-dialog-close]='boardForm.value' [disabled]='boardForm.invalid' (click)='onCreate()'>
+    <button mat-button [mat-dialog-close]='boardForm.value' [disabled]='boardForm.invalid'>
         Create
     </button>
     <button mat-stroked-button class='btn-close' mat-dialog-close>Cancel</button>
