--- a/src/app/modules/board/components/task/task.component.scss
+++ b/src/app/modules/board/components/task/task.component.scss
@@ -16,7 +16,7 @@
 }
 
 .task-item-content{
-    max-width: 80%;
+    width: 80%;
     overflow: hidden;
     padding-right: 10px ;
     text-overflow: ellipsis;
