--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,4 +13,8 @@ body {
     button {
         background-color: #e07a5f !important;
     }
+
+    .btn-close {
+        background-color: inherit !important;
+    }
 }
