--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -2,6 +2,7 @@
 mat-toolbar {
     justify-content: space-between;
     background-color: #81b29a !important;
+    height: 100%;
 
     mat-nav-list {
         display: flex;
