--- a/src/app/modules/board/components/task/task.component.html
+++ b/src/app/modules/board/components/task/task.component.html
@@ -1,9 +1,9 @@
-<mat-card class="task-item" (click)="onShowTask()" >
-    <mat-card-content class="task-item-content">
-        <h3 class="task-item-title" > {{ task.title }} </h3>
+<mat-card class='task-item'>
+    <mat-card-content class='task-item-content' (click)='showTaskInfo.emit()'>
+        <h3 class='task-item-title'> {{ task.title }} </h3>
         <p>{{ task.description | slice:0:50 }}</p>
     </mat-card-content>
-    <button mat-mini-fab (click)="deleteTask.emit(task)">
+    <button mat-mini-fab (click)='deleteTask.emit(task)'>
         <mat-icon>delete_outline</mat-icon>
     </button>
 </mat-card>
