--- a/src/app/modules/mail-list/container/lists-shell/lists-shell.component.scss
+++ b/src/app/modules/mail-list/container/lists-shell/lists-shell.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 84vh;
+    height: 100%;
 
 
     mat-spinner, .empty {
