refactor: add translations

--- a/src/app/modules/auth/components/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/components/sign-up/sign-up.component.html
@@ -6,7 +6,7 @@
     </mat-error>
 
     <mat-form-field appearance="fill">
-        <mat-label i18n="Simple message@@regNameMsg">Name</mat-label>
+        <mat-label i18n="Simple message@@nameMsg">Name</mat-label>
         <input matInput type="text" formControlName="name" />
 
         <mat-error
