--- a/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
+++ b/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
@@ -1,20 +1,32 @@
-<h2 mat-dialog-title>Title</h2>
+<h2 mat-dialog-title i18n="Simple title@@boardTitle">Title</h2>
 <div mat-dialog-content>
     <form [formGroup]="boardForm" *ngIf="boardForm" name="boardForm">
         <mat-form-field class="create-board-form-field" appearance="fill">
-            <mat-label>Title</mat-label>
+            <mat-label i18n="Simple title@@boardTitle">Title</mat-label>
             <input formControlName="title" matInput />
             <mat-error class="input-error" *ngIf="title.invalid && title.touched">
-                <span *ngIf="title.errors?.['required']">Please enter a title</span>
-                <span *ngIf="title.errors?.['minlength']"> The title is too short</span>
-                <span *ngIf="title.errors?.['maxlength']"> The title is too long</span>
+                <span *ngIf="title.errors?.['required']" i18n="Input message@@errorTitle"
+                    >Please enter a title</span
+                >
+                <span *ngIf="title.errors?.['minlength']" i18n="Error message@@shortTitleErr">
+                    The title is too short</span
+                >
+                <span *ngIf="title.errors?.['maxlength']" i18n="Error message@@longTitleErr">
+                    The title is too long</span
+                >
             </mat-error>
         </mat-form-field>
     </form>
 </div>
-<mat-dialog-actions  class="create-board-controls">
-    <button mat-button [mat-dialog-close] = "boardForm.value.title" [disabled]="boardForm.invalid" (click)="onCreate()">
+<mat-dialog-actions class="create-board-controls">
+    <button
+        mat-button
+        [mat-dialog-close]="boardForm.value.title"
+        [disabled]="boardForm.invalid"
+        (click)="onCreate()"
+        i18n="Button message@@createText"
+    >
         Create
     </button>
-    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button mat-dialog-close i18n="Button message@@cancelText">Cancel</button>
 </mat-dialog-actions>
