--- a/src/app/modules/board/components/column/column.component.html
+++ b/src/app/modules/board/components/column/column.component.html
@@ -1,23 +1,27 @@
-<div class='title-column'>
-    <h4 [style.color]='"#14213d"'>Title: {{column.title}}</h4>
+<div class="title-column">
+    <h4 [style.color]="'#14213d'" i18n="Simple message@@columnTitle">Title: {{ column.title }}</h4>
 
-    <button mat-mini-fab (click)='onDeleteColumn(column)'>
+    <button mat-mini-fab (click)="onDeleteColumn(column)">
         <mat-icon>close</mat-icon>
     </button>
 </div>
 
-<div class='column'>
-    <button mat-mini-fab (click)='onAddTask(column)'>
+<div class="column">
+    <button mat-mini-fab (click)="onAddTask(column)">
         <mat-icon>add</mat-icon>
     </button>
 
-    <div class='tasks'>
-        <p *ngIf='!column.tasks.length; else tasks'>Task list is empty</p>
+    <div class="tasks">
+        <p *ngIf="!column.tasks.length; else tasks" i18n="Simple message@@emptyList">
+            Task list is empty
+        </p>
     </div>
 
     <ng-template #tasks>
-        <app-task *ngFor='let task of column.tasks'
-                  [task]='task'
-                  (deleteTask)='deleteTask.emit({task, columnId:column.id})'></app-task>
+        <app-task
+            *ngFor="let task of column.tasks"
+            [task]="task"
+            (deleteTask)="deleteTask.emit({task, columnId:column.id})"
+        ></app-task>
     </ng-template>
 </div>
