--- a/src/app/modules/board/containers/board-shell/board-shell.component.html
+++ b/src/app/modules/board/containers/board-shell/board-shell.component.html
@@ -1,44 +1,49 @@
-<a [routerLink]='["../"]' class='back-btn'>
+<a [routerLink]="['../']" class="back-btn">
     <mat-icon>arrow_back</mat-icon>
 </a>
 
-<ng-container *ngIf='this.boards$ | async; else spinner'>
-
-    <h3>{{(this.boards$ | async).title}}</h3>
+<ng-container *ngIf="this.boards$ | async; else spinner">
+    <h3>{{ (this.boards$ | async).title }}</h3>
 
     <div
-        [ngClass]='{"columnTrue": (boards$| async).columns.length > 0,
-        "columnFalse": (boards$| async).columns.length < 1}'>
-
-        <ng-container *ngIf='(this.boards$ | async).columns.length; else emptyColumn'>
-            <div class='column-wrap'>
-                <app-column *ngFor='let column of (this.boards$ | async).columns; let i = index'
-                            [column]='column'
-                            [index]='i'
-                            (deleteColumn)='onDeleteColumn($event)'
-                            (addTask)='onAddTask($event)'
-                            (deleteTask)='onDeleteTask($event)'
+        [ngClass]="{
+            columnTrue: (boards$ | async).columns.length > 0,
+            columnFalse: (boards$ | async).columns.length < 1
+        }"
+    >
+        <ng-container *ngIf="(this.boards$ | async).columns.length; else emptyColumn">
+            <div class="column-wrap">
+                <app-column
+                    *ngFor="let column of (this.boards$ | async).columns; let i = index"
+                    [column]="column"
+                    [index]="i"
+                    (deleteColumn)="onDeleteColumn($event)"
+                    (addTask)="onAddTask($event)"
+                    (deleteTask)="onDeleteTask($event)"
                 >
                 </app-column>
             </div>
         </ng-container>
 
         <ng-template #emptyColumn>
-            <div class='empty'>
-                Non column
-            </div>
+            <div class="empty" i18n="Simple message@@nonColumnText">Non column</div>
         </ng-template>
 
-        <button mat-raised-button color='warn'
-                aria-label='Created column'
-                type='button'
-                [ngClass]='{"emptyBtn": (boards$| async).columns.length < 1,
-                        "fullBtn": (boards$| async).columns.length > 0}'
-                (click)='addColumn()'>
+        <button
+            mat-raised-button
+            color="warn"
+            aria-label="Created column"
+            type="button"
+            [ngClass]="{
+                emptyBtn: (boards$ | async).columns.length < 1,
+                fullBtn: (boards$ | async).columns.length > 0
+            }"
+            (click)="addColumn()"
+            i18n="Simple message@@addColumnText"
+        >
             + Add column
         </button>
     </div>
-
 </ng-container>
 <ng-template #spinner>
     <mat-spinner></mat-spinner>
