feat: update task on backend

--- a/src/app/modules/board/components/column/column.component.html
+++ b/src/app/modules/board/components/column/column.component.html
@@ -44,7 +44,7 @@
 
     <ng-template #tasks>
         <div cdkDropList class='example-list' [cdkDropListData]='column.tasks' (cdkDropListDropped)='drop($event)'>
-            <app-task *ngFor='let task of column.tasks'
+            <app-task *ngFor='let task of column.tasks;'
                       cdkDrag
                       class='example-box'
                       [task]='task'
