--- a/src/app/modules/board/components/column/column.component.scss
+++ b/src/app/modules/board/components/column/column.component.scss
@@ -18,8 +18,8 @@
     max-width: 350px;
     background-color: #dbcfc1;
     margin-right: 16px;
-    height: calc(100vh - 500px);
-    overflow: auto;
+    height: 70%;
+    overflow-y: scroll;
 
     button {
         margin-bottom: 10px;
@@ -79,7 +79,6 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-}
 
 .column-form-input {
     display: block;
