--- a/src/app/modules/board/containers/task-info-popup-shell/task-info-popup-shell.component.scss
+++ b/src/app/modules/board/containers/task-info-popup-shell/task-info-popup-shell.component.scss
@@ -1,3 +1,9 @@
+:host {
+    .btn-close {
+        background-color: white !important;
+    }
+}
+
 .task-info-form-field {
     padding-bottom: 15px;
     text-align: left;
@@ -7,3 +13,5 @@
 .form-task-info-controls {
     justify-content: flex-end;
 }
+
+
