--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,6 +1,6 @@
 mat-toolbar {
-    //height: 100%;
-    //position: relative;
+    height: 100%;
+    justify-content: center;
     bottom: 0;
     display: flex;
     flex-direction: column;
