--- a/src/app/modules/board/containers/board-shell/board-shell.component.html
+++ b/src/app/modules/board/containers/board-shell/board-shell.component.html
@@ -1,10 +1,11 @@
 <ng-container *ngIf='this.boards$ | async; else spinner'>
-<div class="board-title-container">
-    <a [routerLink]='["../"]' class='back-btn'>
-        <mat-icon>arrow_back</mat-icon>
-    </a>
-    <h2>{{((this.boards$ | async)!).title}}</h2>
-</div>
+    <div class='board-title-container'>
+        <a [routerLink]='["../"]' class='back-btn'>
+            <mat-icon>arrow_back</mat-icon>
+        </a>
+        <h2>{{((this.boards$ | async)!).title}}</h2>
+    </div>
+
     <div
         [ngClass]='{"columnTrue": (boards$| async).columns.length > 0,
         "columnFalse": (boards$| async).columns.length < 1}'>
@@ -19,6 +20,7 @@
                             (addTask)='onAddTask($event)'
                             (deleteTask)='onDeleteTask($event)'
                             (showTask)='onShowTaskDialog($event)'
+                            (movedTask)='movedTask($event)'
                 >
                 </app-column>
             </div>
