feat: add translations

--- a/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
+++ b/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
@@ -17,13 +17,19 @@
             </mat-error>
         </mat-form-field>
 
-        <mat-form-field class='create-board-form-field' appearance='fill'>
-            <mat-label>Description</mat-label>
-            <input formControlName='description' matInput />
-            <mat-error class='input-error' *ngIf='description.invalid && description.touched'>
-                <span *ngIf="description.errors?.['required']">Please enter a description</span>
-                <span *ngIf="description.errors?.['minlength']"> The description is too short</span>
-                <span *ngIf="description.errors?.['maxlength']"> The description is too long</span>
+        <mat-form-field class="create-board-form-field" appearance="fill">
+            <mat-label i18n="Simple message@@descrText">Description</mat-label>
+            <input formControlName="description" matInput />
+            <mat-error class="input-error" *ngIf="description.invalid && description.touched">
+                <span *ngIf="description.errors?.['required']" i18n="Input message@@errorDescr"
+                    >Please enter a description</span
+                >
+                <span *ngIf="description.errors?.['minlength']" i18n="Error message@@shortDescrErr">
+                    The description is too short</span
+                >
+                <span *ngIf="description.errors?.['maxlength']" i18n="Error message@@longDescrErr">
+                    The description is too long</span
+                >
             </mat-error>
         </mat-form-field>
     </form>
@@ -37,5 +43,7 @@
     >
         Create
     </button>
-    <button at-stroked-button class='btn-close' mat-dialog-close i18n="Button message@@cancelText">Cancel</button>
+    <button at-stroked-button class="btn-close" mat-dialog-close i18n="Button message@@cancelText">
+        Cancel
+    </button>
 </mat-dialog-actions>
