fix: fix interface

--- a/src/app/modules/board/containers/board-shell/board-shell.component.html
+++ b/src/app/modules/board/containers/board-shell/board-shell.component.html
@@ -21,6 +21,7 @@
                             (deleteTask)='onDeleteTask($event)'
                             (showTask)='onShowTaskDialog($event)'
                             (movedTask)='movedTask($event)'
+                            [columns]='(boards$| async).columns'
                 >
                 </app-column>
             </div>
