--- a/src/app/modules/board/components/column/column.component.scss
+++ b/src/app/modules/board/components/column/column.component.scss
@@ -34,6 +34,10 @@
     overflow-y: scroll;
     max-height: 85%;
 
+    .tasks {
+        text-align: center;
+    }
+
     button {
         margin-bottom: 10px;
     }
