feat: implement stisky-header

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color='primary'>
+<mat-toolbar color='primary' appStickyHeader>
     <mat-nav-list class='nav-list'>
         <a
             [routerLink]='link.route'
